# OpenGLEngine

./: .gitignore  CMakeLists.txt  README.md
OpenGLEngine/: CMakeLists.txt  OpenGLEngine.cpp  OpenGLEngine.h
OpenGLEngine/inc/: Camera.h  CubeMesh.h  Log.h  Mesh.h  PyramidMesh.h  Renderer.h  Shader.h  Texture.h  Window.h  graphics.h  meshes.h
OpenGLEngine/res/shaders/: fragment.frag  vertex.vert
OpenGLEngine/src/: Camera.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Window.cpp
